fix animation on mobile menu

--- a/sass/headers.scss
+++ b/sass/headers.scss
@@ -47,7 +47,7 @@ nav > a {
     font-size: 1.5rem;
     background-color: rgba(0,0,0,0.2);
     z-index: 11;
-    transition: max-height 0.3s linear;
+    transition: height 0.2s linear;
     overflow: hidden;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
